testdata/invalid/invalid_message_no_semi.bop
message Test {
    1 -> int64 foo
}